common/yak/antlr4Lua/parser/lua_parser.go
// Code generated from ./LuaParser.g4 by ANTLR 4.13.2. DO NOT EDIT.

package parser // LuaParser

import (
	"fmt"
	"strconv"
	"sync"

	"github.com/yaklang/antlr/v4"
)

// Suppress unused import errors
var _ = fmt.Printf
var _ = strconv.Itoa
var _ = sync.Once{}

type LuaParser struct {
	*antlr.BaseParser
}

var LuaParserParserStaticData struct {
	once                   sync.Once
	serializedATN          []int32
	LiteralNames           []string
	SymbolicNames          []string
	RuleNames              []string
	PredictionContextCache *antlr.PredictionContextCache
	atn                    *antlr.ATN
	decisionToDFA          []*antlr.DFA
}

func luaparserParserInit() {
	staticData := &LuaParserParserStaticData
	staticData.LiteralNames = []string{
		"", "'function'", "'nil'", "'false'", "'true'", "'return'", "'break'",
		"'continue'", "'goto'", "'repeat'", "'until'", "'while'", "'do'", "'end'",
		"'if'", "'then'", "'else'", "'elseif'", "'for'", "'in'", "'local'",
		"'not'", "'or'", "'and'", "'*'", "'/'", "'//'", "'%'", "'&'", "'|'",
		"'<<'", "'>>'", "'+'", "'-'", "'^'", "'<'", "'>'", "'=='", "'<='", "'>='",
		"'~='", "':'", "'::'", "'['", "']'", "'('", "')'", "'{'", "'}'", "','",
		"'#'", "'='", "'++'", "'--'", "'+='", "'-='", "'*='", "'/='", "'%='",
		"';'", "'...'", "'~'", "'.'", "'..'",
	}
	staticData.SymbolicNames = []string{
		"", "Function", "Nil", "False", "True", "Return", "Break", "Continue",
		"Goto", "Repeat", "Until", "While", "Do", "End", "If", "Then", "Else",
		"ElseIf", "For", "In", "Local", "Not", "Or", "And", "Mul", "Div", "IntegralDiv",
		"Mod", "Amp", "Xand", "LtLt", "GtGt", "Plus", "Sub", "Power", "Lt",
		"Gt", "Eq", "LtEq", "GtEq", "Neq", "Colon", "DoubleColon", "LBracket",
		"RBracket", "LParen", "RParen", "LBrace", "RBrace", "Comma", "Pound",
		"AssignEq", "PlusPlus", "SubSub", "PlusEq", "MinusEq", "MulEq", "DivEq",
		"ModEq", "SemiColon", "Ellipsis", "NotSymbol", "Dot", "Strcat", "NAME",
		"NORMALSTRING", "CHARSTRING", "LONGSTRING", "INT", "HEX", "FLOAT", "HEX_FLOAT",
		"COMMENT", "LINE_COMMENT", "WS", "SHEBANG",
	}
	staticData.RuleNames = []string{
		"chunk", "block", "stat", "attnamelist", "attrib", "laststat", "label",
		"funcname", "varlist", "namelist", "explist", "exp", "prefixexp", "functioncall",
		"varOrExp", "var", "varSuffix", "nameAndArgs", "args", "functiondef",
		"funcbody", "parlist", "tableconstructor", "fieldlist", "field", "fieldsep",
		"operatorOr", "operatorAnd", "operatorComparison", "operatorStrcat",
		"operatorAddSub", "operatorMulDivMod", "operatorBitwise", "operatorUnary",
		"operatorPower", "number", "string",
	}
	staticData.PredictionContextCache = antlr.NewPredictionContextCache()
	deserializer := antlr.NewATNDeserializer(nil)
	staticData.atn = deserializer.Deserialize(staticData.serializedATN)
	atn := staticData.atn
	staticData.decisionToDFA = make([]*antlr.DFA, len(atn.DecisionToState))
	decisionToDFA := staticData.decisionToDFA
	for index, state := range atn.DecisionToState {
		decisionToDFA[index] = antlr.NewDFA(state, index)
	}
}

// LuaParserInit initializes any static state used to implement LuaParser. By default the
// static state used to implement the parser is lazily initialized during the first call to
// NewLuaParser(). You can call this function if you wish to initialize the static state ahead
// of time.
func LuaParserInit() {
	staticData := &LuaParserParserStaticData
	staticData.once.Do(luaparserParserInit)
}

// NewLuaParser produces a new parser instance for the optional input antlr.TokenStream.
func NewLuaParser(input antlr.TokenStream) *LuaParser {
	LuaParserInit()
	this := new(LuaParser)
	this.BaseParser = antlr.NewBaseParser(input)
	staticData := &LuaParserParserStaticData
	this.Interpreter = antlr.NewParserATNSimulator(this, staticData.atn, staticData.decisionToDFA, staticData.PredictionContextCache)
	this.RuleNames = staticData.RuleNames
	this.LiteralNames = staticData.LiteralNames
	this.SymbolicNames = staticData.SymbolicNames
	this.GrammarFileName = "LuaParser.g4"

	return this
}

// LuaParser tokens.
const (
	LuaParserEOF          = antlr.TokenEOF
	LuaParserFunction     = 1
	LuaParserNil          = 2
	LuaParserFalse        = 3
	LuaParserTrue         = 4
	LuaParserReturn       = 5
	LuaParserBreak        = 6
	LuaParserContinue     = 7
	LuaParserGoto         = 8
	LuaParserRepeat       = 9
	LuaParserUntil        = 10
	LuaParserWhile        = 11
	LuaParserDo           = 12
	LuaParserEnd          = 13
	LuaParserIf           = 14
	LuaParserThen         = 15
	LuaParserElse         = 16
	LuaParserElseIf       = 17
	LuaParserFor          = 18
	LuaParserIn           = 19
	LuaParserLocal        = 20
	LuaParserNot          = 21
	LuaParserOr           = 22
	LuaParserAnd          = 23
	LuaParserMul          = 24
	LuaParserDiv          = 25
	LuaParserIntegralDiv  = 26
	LuaParserMod          = 27
	LuaParserAmp          = 28
	LuaParserXand         = 29
	LuaParserLtLt         = 30
	LuaParserGtGt         = 31
	LuaParserPlus         = 32
	LuaParserSub          = 33
	LuaParserPower        = 34
	LuaParserLt           = 35
	LuaParserGt           = 36
	LuaParserEq           = 37
	LuaParserLtEq         = 38
	LuaParserGtEq         = 39
	LuaParserNeq          = 40
	LuaParserColon        = 41
	LuaParserDoubleColon  = 42
	LuaParserLBracket     = 43
	LuaParserRBracket     = 44
	LuaParserLParen       = 45
	LuaParserRParen       = 46
	LuaParserLBrace       = 47
	LuaParserRBrace       = 48
	LuaParserComma        = 49
	LuaParserPound        = 50
	LuaParserAssignEq     = 51
	LuaParserPlusPlus     = 52
	LuaParserSubSub       = 53
	LuaParserPlusEq       = 54
	LuaParserMinusEq      = 55
	LuaParserMulEq        = 56
	LuaParserDivEq        = 57
	LuaParserModEq        = 58
	LuaParserSemiColon    = 59
	LuaParserEllipsis     = 60
	LuaParserNotSymbol    = 61
	LuaParserDot          = 62
	LuaParserStrcat       = 63
	LuaParserNAME         = 64
	LuaParserNORMALSTRING = 65
	LuaParserCHARSTRING   = 66
	LuaParserLONGSTRING   = 67
	LuaParserINT          = 68
	LuaParserHEX          = 69
	LuaParserFLOAT        = 70
	LuaParserHEX_FLOAT    = 71
	LuaParserCOMMENT      = 72
	LuaParserLINE_COMMENT = 73
	LuaParserWS           = 74
	LuaParserSHEBANG      = 75
)

// LuaParser rules.
const (
	LuaParserRULE_chunk              = 0
	LuaParserRULE_block              = 1
	LuaParserRULE_stat               = 2
	LuaParserRULE_attnamelist        = 3
	LuaParserRULE_attrib             = 4
	LuaParserRULE_laststat           = 5
	LuaParserRULE_label              = 6
	LuaParserRULE_funcname           = 7
	LuaParserRULE_varlist            = 8
	LuaParserRULE_namelist           = 9
	LuaParserRULE_explist            = 10
	LuaParserRULE_exp                = 11
	LuaParserRULE_prefixexp          = 12
	LuaParserRULE_functioncall       = 13
	LuaParserRULE_varOrExp           = 14
	LuaParserRULE_var                = 15
	LuaParserRULE_varSuffix          = 16
	LuaParserRULE_nameAndArgs        = 17
	LuaParserRULE_args               = 18
	LuaParserRULE_functiondef        = 19
	LuaParserRULE_funcbody           = 20
	LuaParserRULE_parlist            = 21
	LuaParserRULE_tableconstructor   = 22
	LuaParserRULE_fieldlist          = 23
	LuaParserRULE_field              = 24
	LuaParserRULE_fieldsep           = 25
	LuaParserRULE_operatorOr         = 26
	LuaParserRULE_operatorAnd        = 27
	LuaParserRULE_operatorComparison = 28
	LuaParserRULE_operatorStrcat     = 29
	LuaParserRULE_operatorAddSub     = 30
	LuaParserRULE_operatorMulDivMod  = 31
	LuaParserRULE_operatorBitwise    = 32
	LuaParserRULE_operatorUnary      = 33
	LuaParserRULE_operatorPower      = 34
	LuaParserRULE_number             = 35
	LuaParserRULE_string             = 36
)

// IChunkContext is an interface to support dynamic dispatch.
type IChunkContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	Block() IBlockContext
	EOF() antlr.TerminalNode

	// IsChunkContext differentiates from other interfaces.
	IsChunkContext()
}

type ChunkContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyChunkContext() *ChunkContext {
	var p = new(ChunkContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LuaParserRULE_chunk
	return p
}

func InitEmptyChunkContext(p *ChunkContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LuaParserRULE_chunk
}

func (*ChunkContext) IsChunkContext() {}

func NewChunkContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *ChunkContext {
	var p = new(ChunkContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = LuaParserRULE_chunk

	return p
}

func (s *ChunkContext) GetParser() antlr.Parser { return s.parser }

func (s *ChunkContext) Block() IBlockContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *ChunkContext) EOF() antlr.TerminalNode {
	return s.GetToken(LuaParserEOF, 0)
}

func (s *ChunkContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *ChunkContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *ChunkContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LuaParserVisitor:
		return t.VisitChunk(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *LuaParser) Chunk() (localctx IChunkContext) {
	this := p
	_ = this

	localctx = NewChunkContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 0, LuaParserRULE_chunk)
	p.EnterOuterAlt(localctx, 1)
	{
		p.SetState(74)
		p.Block()
	}
	{
		p.SetState(75)
		p.Match(LuaParserEOF)
		if p.HasError() {
			// Recognition error - abort rule
			goto errorExit
		}
	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IBlockContext is an interface to support dynamic dispatch.
type IBlockContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	AllStat() []IStatContext
	Stat(i int) IStatContext
	Laststat() ILaststatContext

	// IsBlockContext differentiates from other interfaces.
	IsBlockContext()
}

type BlockContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyBlockContext() *BlockContext {
	var p = new(BlockContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LuaParserRULE_block
	return p
}

func InitEmptyBlockContext(p *BlockContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LuaParserRULE_block
}

func (*BlockContext) IsBlockContext() {}

func NewBlockContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *BlockContext {
	var p = new(BlockContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = LuaParserRULE_block

	return p
}

func (s *BlockContext) GetParser() antlr.Parser { return s.parser }

func (s *BlockContext) AllStat() []IStatContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IStatContext); ok {
			len++
		}
	}

	tst := make([]IStatContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IStatContext); ok {
			tst[i] = t.(IStatContext)
			i++
		}
	}

	return tst
}

func (s *BlockContext) Stat(i int) IStatContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IStatContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IStatContext)
}

func (s *BlockContext) Laststat() ILaststatContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILaststatContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILaststatContext)
}

func (s *BlockContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *BlockContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *BlockContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LuaParserVisitor:
		return t.VisitBlock(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *LuaParser) Block() (localctx IBlockContext) {
	this := p
	_ = this

	localctx = NewBlockContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 2, LuaParserRULE_block)
	var _la int

	var _alt int

	p.EnterOuterAlt(localctx, 1)
	p.SetState(80)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext())
	if p.HasError() {
		goto errorExit
	}
	for _alt != 2 && _alt != antlr.ATNInvalidAltNumber {
		if _alt == 1 {
			{
				p.SetState(77)
				p.Stat()
			}

		}
		p.SetState(82)
		p.GetErrorHandler().Sync(p)
		if p.HasError() {
			goto errorExit
		}
		_alt = p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 0, p.GetParserRuleContext())
		if p.HasError() {
			goto errorExit
		}
	}
	p.SetState(84)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}
	_la = p.GetTokenStream().LA(1)

	if (int64(_la) & ^0x3f) == 0 && ((int64(1)<<_la)&224) != 0 {
		{
			p.SetState(83)
			p.Laststat()
		}

	}

errorExit:
	if p.HasError() {
		v := p.GetError()
		localctx.SetException(v)
		p.GetErrorHandler().ReportError(p, v)
		p.GetErrorHandler().Recover(p, v)
		p.SetError(nil)
	}
	p.ExitRule()
	return localctx
	goto errorExit // Trick to prevent compiler error if the label is not used
}

// IStatContext is an interface to support dynamic dispatch.
type IStatContext interface {
	antlr.ParserRuleContext

	// GetParser returns the parser.
	GetParser() antlr.Parser

	// Getter signatures
	SemiColon() antlr.TerminalNode
	Varlist() IVarlistContext
	AssignEq() antlr.TerminalNode
	Explist() IExplistContext
	Functioncall() IFunctioncallContext
	Label() ILabelContext
	Break() antlr.TerminalNode
	Goto() antlr.TerminalNode
	NAME() antlr.TerminalNode
	Do() antlr.TerminalNode
	AllBlock() []IBlockContext
	Block(i int) IBlockContext
	End() antlr.TerminalNode
	While() antlr.TerminalNode
	AllExp() []IExpContext
	Exp(i int) IExpContext
	Repeat() antlr.TerminalNode
	Until() antlr.TerminalNode
	If() antlr.TerminalNode
	AllThen() []antlr.TerminalNode
	Then(i int) antlr.TerminalNode
	AllElseIf() []antlr.TerminalNode
	ElseIf(i int) antlr.TerminalNode
	Else() antlr.TerminalNode
	For() antlr.TerminalNode
	AllComma() []antlr.TerminalNode
	Comma(i int) antlr.TerminalNode
	Namelist() INamelistContext
	In() antlr.TerminalNode
	Function() antlr.TerminalNode
	Funcname() IFuncnameContext
	Funcbody() IFuncbodyContext
	Local() antlr.TerminalNode
	Attnamelist() IAttnamelistContext

	// IsStatContext differentiates from other interfaces.
	IsStatContext()
}

type StatContext struct {
	antlr.BaseParserRuleContext
	parser antlr.Parser
}

func NewEmptyStatContext() *StatContext {
	var p = new(StatContext)
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LuaParserRULE_stat
	return p
}

func InitEmptyStatContext(p *StatContext) {
	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, nil, -1)
	p.RuleIndex = LuaParserRULE_stat
}

func (*StatContext) IsStatContext() {}

func NewStatContext(parser antlr.Parser, parent antlr.ParserRuleContext, invokingState int) *StatContext {
	var p = new(StatContext)

	antlr.InitBaseParserRuleContext(&p.BaseParserRuleContext, parent, invokingState)

	p.parser = parser
	p.RuleIndex = LuaParserRULE_stat

	return p
}

func (s *StatContext) GetParser() antlr.Parser { return s.parser }

func (s *StatContext) SemiColon() antlr.TerminalNode {
	return s.GetToken(LuaParserSemiColon, 0)
}

func (s *StatContext) Varlist() IVarlistContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IVarlistContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IVarlistContext)
}

func (s *StatContext) AssignEq() antlr.TerminalNode {
	return s.GetToken(LuaParserAssignEq, 0)
}

func (s *StatContext) Explist() IExplistContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExplistContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExplistContext)
}

func (s *StatContext) Functioncall() IFunctioncallContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFunctioncallContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFunctioncallContext)
}

func (s *StatContext) Label() ILabelContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(ILabelContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(ILabelContext)
}

func (s *StatContext) Break() antlr.TerminalNode {
	return s.GetToken(LuaParserBreak, 0)
}

func (s *StatContext) Goto() antlr.TerminalNode {
	return s.GetToken(LuaParserGoto, 0)
}

func (s *StatContext) NAME() antlr.TerminalNode {
	return s.GetToken(LuaParserNAME, 0)
}

func (s *StatContext) Do() antlr.TerminalNode {
	return s.GetToken(LuaParserDo, 0)
}

func (s *StatContext) AllBlock() []IBlockContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IBlockContext); ok {
			len++
		}
	}

	tst := make([]IBlockContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IBlockContext); ok {
			tst[i] = t.(IBlockContext)
			i++
		}
	}

	return tst
}

func (s *StatContext) Block(i int) IBlockContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IBlockContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IBlockContext)
}

func (s *StatContext) End() antlr.TerminalNode {
	return s.GetToken(LuaParserEnd, 0)
}

func (s *StatContext) While() antlr.TerminalNode {
	return s.GetToken(LuaParserWhile, 0)
}

func (s *StatContext) AllExp() []IExpContext {
	children := s.GetChildren()
	len := 0
	for _, ctx := range children {
		if _, ok := ctx.(IExpContext); ok {
			len++
		}
	}

	tst := make([]IExpContext, len)
	i := 0
	for _, ctx := range children {
		if t, ok := ctx.(IExpContext); ok {
			tst[i] = t.(IExpContext)
			i++
		}
	}

	return tst
}

func (s *StatContext) Exp(i int) IExpContext {
	var t antlr.RuleContext
	j := 0
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IExpContext); ok {
			if j == i {
				t = ctx.(antlr.RuleContext)
				break
			}
			j++
		}
	}

	if t == nil {
		return nil
	}

	return t.(IExpContext)
}

func (s *StatContext) Repeat() antlr.TerminalNode {
	return s.GetToken(LuaParserRepeat, 0)
}

func (s *StatContext) Until() antlr.TerminalNode {
	return s.GetToken(LuaParserUntil, 0)
}

func (s *StatContext) If() antlr.TerminalNode {
	return s.GetToken(LuaParserIf, 0)
}

func (s *StatContext) AllThen() []antlr.TerminalNode {
	return s.GetTokens(LuaParserThen)
}

func (s *StatContext) Then(i int) antlr.TerminalNode {
	return s.GetToken(LuaParserThen, i)
}

func (s *StatContext) AllElseIf() []antlr.TerminalNode {
	return s.GetTokens(LuaParserElseIf)
}

func (s *StatContext) ElseIf(i int) antlr.TerminalNode {
	return s.GetToken(LuaParserElseIf, i)
}

func (s *StatContext) Else() antlr.TerminalNode {
	return s.GetToken(LuaParserElse, 0)
}

func (s *StatContext) For() antlr.TerminalNode {
	return s.GetToken(LuaParserFor, 0)
}

func (s *StatContext) AllComma() []antlr.TerminalNode {
	return s.GetTokens(LuaParserComma)
}

func (s *StatContext) Comma(i int) antlr.TerminalNode {
	return s.GetToken(LuaParserComma, i)
}

func (s *StatContext) Namelist() INamelistContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(INamelistContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(INamelistContext)
}

func (s *StatContext) In() antlr.TerminalNode {
	return s.GetToken(LuaParserIn, 0)
}

func (s *StatContext) Function() antlr.TerminalNode {
	return s.GetToken(LuaParserFunction, 0)
}

func (s *StatContext) Funcname() IFuncnameContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFuncnameContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFuncnameContext)
}

func (s *StatContext) Funcbody() IFuncbodyContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IFuncbodyContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IFuncbodyContext)
}

func (s *StatContext) Local() antlr.TerminalNode {
	return s.GetToken(LuaParserLocal, 0)
}

func (s *StatContext) Attnamelist() IAttnamelistContext {
	var t antlr.RuleContext
	for _, ctx := range s.GetChildren() {
		if _, ok := ctx.(IAttnamelistContext); ok {
			t = ctx.(antlr.RuleContext)
			break
		}
	}

	if t == nil {
		return nil
	}

	return t.(IAttnamelistContext)
}

func (s *StatContext) GetRuleContext() antlr.RuleContext {
	return s
}

func (s *StatContext) ToStringTree(ruleNames []string, recog antlr.Recognizer) string {
	return antlr.TreesStringTree(s, ruleNames, recog)
}

func (s *StatContext) Accept(visitor antlr.ParseTreeVisitor) interface{} {
	switch t := visitor.(type) {
	case LuaParserVisitor:
		return t.VisitStat(s)

	default:
		return t.VisitChildren(s)
	}
}

func (p *LuaParser) Stat() (localctx IStatContext) {
	this := p
	_ = this

	localctx = NewStatContext(p, p.GetParserRuleContext(), p.GetState())
	p.EnterRule(localctx, 4, LuaParserRULE_stat)
	var _la int

	p.SetState(167)
	p.GetErrorHandler().Sync(p)
	if p.HasError() {
		goto errorExit
	}

	switch p.GetInterpreter().AdaptivePredict(p.BaseParser, p.GetTokenStream(), 6, p.GetParserRuleContext()) {
	case 1:
		p.EnterOuterAlt(localctx, 1)
		{
			p.SetState(86)
			p.Match(LuaParserSemiColon)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}

	case 2:
		p.EnterOuterAlt(localctx, 2)
		{
			p.SetState(87)
			p.Varlist()
		}
		{
			p.SetState(88)
			p.Match(LuaParserAssignEq)
			if p.HasError() {
				// Recognition error - abort rule
				goto errorExit
			}
		}
		{
			p.SetState(89)
			p.Explist()
		}

	case 3:
		p.EnterOuterAlt(localctx, 3)
		{
			p.SetState(91)
			p.Functioncall()
		}
